<resources>
    <string name="app_name">mvpAuth</string>
    <string name="hint_login_mail">Введите email</string>
    <string name="hint_login_pass">Введите пароль</string>

    <!--Fonts-->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="login_start_btn_text">Войти</string>
    <string name="login_show_btn_text">Смотреть каталог</string>

    <string name="font_book">fonts/PTBebasNeueBook.ttf</string>
    <string name="font_regular">fonts/PTBebasNeueRegular.ttf</string>
    <string name="text_email">gervit2008@mail.ru</string>
    <string name="paer_account_string">Личный кабинет</string>
    <string name="goods_catalog_string">Каталог товаров</string>
    <string name="favorites_string">Избранное</string>
    <string name="orders_string">Мои заказы</string>
    <string name="notices_string">Мои уведомления</string>
    <string name="account_name">Герасимов Виталий</string>
    <string name="open_drawer_str">open</string>
    <string name="close_drawer_str">close</string>
    <string name="product_name_example">Товар 1</string>
    <string name="product_descript_example">jigkkbbklglglll\n fkkkkgkgkg</string>
    <string name="count_string">Количество</string>
    <string name="price_string">Стоимость</string>
    <string name="catalog_btn_caption">В корзину</string>

</resources>
