<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/product_card"
        style="@style/CustomCard.ProductCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                style="@style/ProductText.ProductTitle"
                android:text="@string/product_name_example"/>

            <TextView
                android:id="@+id/product_description"
                style="@style/ProductText.ProductDescription"
                android:text="@string/product_descript_example"/>

            <com.skillbranch.thirdapp.ui.custom_views.AspectRatioImageView
                android:id="@+id/product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/product_example"
                app:aspect_ratio="1.78"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ProductText.LabelPrice"
                        android:text="@string/count_string"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/minus_btn"
                            style="@style/CountBtn"
                            android:src="@drawable/ic_remove_black_24dp"/>

                        <TextView
                            android:id="@+id/product_counter"
                            style="@style/ProductText.ValuePrice"
                            android:text="1"/>

                        <ImageButton
                            android:id="@+id/plus_btn"
                            style="@style/CountBtn"
                            android:src="@drawable/ic_add_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ProductText.LabelPrice"
                        android:text="@string/price_string"/>

                    <TextView
                        android:id="@+id/product_price"
                        style="@style/ProductText.ValuePrice"
                        android:text="27000.-"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>